--- a/index.html
+++ b/index.html
@@ -28,42 +28,32 @@
         </ul>
       </header>
       <section>
-        <p></p><h1>
-<a id="wpsso-app-meta" class="anchor" href="#wpsso-app-meta" aria-hidden="true"><span class="octicon octicon-link"></span></a>WPSSO App Meta</h1><h3>
-<a id="for-apples-mobile-safari-and-twitters-app-card" class="anchor" href="#for-apples-mobile-safari-and-twitters-app-card" aria-hidden="true"><span class="octicon octicon-link"></span></a>for Apple's mobile Safari and Twitter's App Card</h3>
+<h1>WPSSO App Meta</h1><h3>for Apple&#039;s mobile Safari and Twitter&#039;s App Card</h3>
 
-<blockquote>
-<strong>Contributors</strong>: jsmoriss<br>
-<strong>Donate Link</strong>: https://surniaulula.com/extend/plugins/wpsso-am/<br>
-<strong>Tags</strong>: wpsso, app, iphone, ipad, googleplay, meta, tags, itunes<br>
-<strong>License</strong>: GPLv3<br>
-<strong>License URI</strong>: http://www.gnu.org/licenses/gpl.txt<br>
-<strong>Requires At Least</strong>: 3.0<br>
-<strong>Tested Up To</strong>: 4.2<br>
-<strong>Stable Tag</strong>: 1.3.1<br>
-</blockquote>
+<table>
+<tr><th align="right" valign="top" nowrap>Contributors</th><td>jsmoriss</td></tr>
+<tr><th align="right" valign="top" nowrap>Donate Link</th><td><a href="https://surniaulula.com/extend/plugins/wpsso-am/">https://surniaulula.com/extend/plugins/wpsso-am/</a></td></tr>
+<tr><th align="right" valign="top" nowrap>Tags</th><td>wpsso, app, iphone, ipad, googleplay, meta, tags, itunes</td></tr>
+<tr><th align="right" valign="top" nowrap>License</th><td>GPLv3</td></tr>
+<tr><th align="right" valign="top" nowrap>License URI</th><td><a href="http://www.gnu.org/licenses/gpl.txt">http://www.gnu.org/licenses/gpl.txt</a></td></tr>
+<tr><th align="right" valign="top" nowrap>Requires At Least</th><td>3.0</td></tr>
+<tr><th align="right" valign="top" nowrap>Tested Up To</th><td>4.2</td></tr>
+<tr><th align="right" valign="top" nowrap>Stable Tag</th><td>1.3.1</td></tr>
+</table>
 
-<p>
+<p>WPSSO extension to provide Apple Store / iTunes and Google Play App meta tags for Apple&#039;s mobile Safari and Twitter&#039;s App Card.</p>
 
-WPSSO extension to provide Apple Store / iTunes and Google Play App meta tags for Apple's mobile Safari and Twitter's App Card.
+<h3>Description</p>
 
-</p>
-
-<h3>
-<a id="description" class="anchor" href="#description" aria-hidden="true"><span class="octicon octicon-link"></span></a>Description</h3>
-
-<p align="center"><img src="https://surniaulula.github.io/wpsso-am/assets/icon-256x256.png" width="256" height="256"></p>
-
-<p><strong>Do you have a mobile App for your website</strong> that you'd like to promote as a banner in Apple's mobile Safari?</p>
+<p><img src="https://surniaulula.github.io/wpsso-am/assets/icon-256x256.png" width="256" height="256" style="width:33%;min-width:128px;max-width:256px;float:left;margin:0 40px 20px 0;" /><strong>Do you have a mobile App for your website</strong> that you'd like to promote as a banner in Apple's mobile Safari?</p>
 
 <p><strong>Do you sell Apple Store Apps</strong>, and you'd like to support the Twitter App Card for your product pages?</p>
 
-<p>WPSSO App Meta (WPSSO AM) works in conjunction with the <a href="https://wordpress.org/plugins/wpsso/">WordPress Social Sharing Optimization (WPSSO)</a> plugin, extending its features with additional settings pages, tabs, and options, to include iPhone, iPad, and Google Play App meta tags in your webpages (for Apple's mobile Safari and Twitter's App Card). WPSSO AM is <em>fast</em>, <em>efficient</em>, and — using WPSSO as its framework — provides <em>accurate</em> information about your content to social websites.</p>
+<p>WPSSO App Meta (WPSSO AM) works in conjunction with the <a href="https://wordpress.org/plugins/wpsso/">WordPress Social Sharing Optimization (WPSSO)</a> plugin, extending its features with additional settings pages, tabs, and options, to include iPhone, iPad, and Google Play App meta tags in your webpages (for Apple's mobile Safari and Twitter's App Card). WPSSO AM is <em>fast</em>, <em>efficient</em>, and &mdash; using WPSSO as its framework &mdash; provides <em>accurate</em> information about your content to social websites.</p>
 
-<p>You can download the <a href="https://wordpress.org/plugins/wpsso-am/">Free version of WPSSO AM on wordpress.org</a> and purchase Pro license(s) on surniaulula.com (includes a <strong>No Risk 30 Day Refund Policy</strong>). The banner advertisement feature for mobile Safari is included with the Free version, and the Twitter App Card feature is provided with the Pro version.</p>
+<p>You can download the <a href="https://wordpress.org/plugins/wpsso-am/">Free version of WPSSO AM on wordpress.org</a> and <a href="(http://surniaulula.com/extend/plugins/wpsso-am/">purchase Pro license(s) on surniaulula.com</a> (includes a <strong>No Risk 30 Day Refund Policy</strong>). The banner advertisement feature for mobile Safari is included with the Free version, and the Twitter App Card feature is provided with the Pro version.</p>
 
-<h4>
-<a id="quick-list-of-features" class="anchor" href="#quick-list-of-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Quick List of Features</h4>
+<h4>Quick List of Features</h4>
 
 <p><strong>Free / Basic Version</strong></p>
 
@@ -83,188 +73,134 @@ WPSSO extension to provide Apple Store / iTunes and Google Play App meta tags fo
 <li>Apple Store iPhone App ID, Name, and Custom URL Scheme.</li>
 <li>Apple Store iPad App ID, Name, and Custom URL Scheme.</li>
 <li>Google Play App ID, Name, and Custom URL Scheme.</li>
-</ul>
-</li>
+</ul></li>
 <li>Include the <em>App Product</em> tab on Posts, Pages, and custom post types (ie. Product pages).</li>
 <li>Adds the <strong>Twitter App Card</strong> meta tags to <em>App Product</em> webpages for social sharing.</li>
 </ul>
 
-<h4>
-<a id="app-meta-tags" class="anchor" href="#app-meta-tags" aria-hidden="true"><span class="octicon octicon-link"></span></a>App Meta Tags</h4>
+<h4>App Meta Tags</h4>
 
 <ul>
-<li>
-<p><strong>Apple mobile Safari Meta Tags</strong></p>
+<li><p><strong>Apple mobile Safari Meta Tags</strong></p>
 
 <ul>
 <li>apple-itunes-app</li>
-</ul>
-</li>
-<li>
-<p><strong>Twitter App Card Meta Tags</strong> (Pro version)</p>
+</ul></li>
+<li><p><strong>Twitter App Card Meta Tags</strong> (Pro version)</p>
 
 <ul>
 <li>twitter:app:country</li>
-<li>twitter:app<img class="emoji" title=":id:" alt=":id:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f194.png" height="20" width="20" align="absmiddle">iphone</li>
-<li>twitter:app<img class="emoji" title=":id:" alt=":id:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f194.png" height="20" width="20" align="absmiddle">ipad</li>
-<li>twitter:app<img class="emoji" title=":id:" alt=":id:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f194.png" height="20" width="20" align="absmiddle">googleplay</li>
+<li>twitter:app:id:iphone</li>
+<li>twitter:app:id:ipad</li>
+<li>twitter:app:id:googleplay</li>
 <li>twitter:app:name:iphone</li>
 <li>twitter:app:name:ipad</li>
 <li>twitter:app:name:googleplay</li>
 <li>twitter:app:url:iphone</li>
 <li>twitter:app:url:ipad</li>
 <li>twitter:app:url:googleplay</li>
-</ul>
-</li>
+</ul></li>
 </ul>
 
 <blockquote>
 <p><a href="https://wordpress.org/plugins/wpsso/">WordPress Social Sharing Optimization</a> plugin is required to use the WPSSO AM extension. You can use the <em>Free version</em> of WPSSO AM with either WPSSO Free or Pro, but the <a href="http://surniaulula.com/extend/plugins/wpsso-am/">WPSSO AM Pro version</a> requires the use of <a href="http://surniaulula.com/extend/plugins/wpsso/">WPSSO Pro</a> as well.</p>
 </blockquote>
+<h3>Installation</p>
 
-<h3>
-<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h3>
-
-<h4>
-<a id="install-and-uninstall" class="anchor" href="#install-and-uninstall" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install and Uninstall</h4>
+<h4>Install and Uninstall</h4>
 
 <ul>
     <li><a href="http://surniaulula.com/codex/plugins/wpsso-am/installation/install-the-plugin/">Install the Plugin</a></li>
     <li><a href="http://surniaulula.com/codex/plugins/wpsso-am/installation/uninstall-the-plugin/">Uninstall the Plugin</a></li>
 </ul>
+<h3>Frequently Asked Questions</h3>
 
-<h3>
-<a id="frequently-asked-questions" class="anchor" href="#frequently-asked-questions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Frequently Asked Questions</h3>
+<h4>Frequently Asked Questions</h4>
+<h3>Other Notes</h3>
 
-<h4>
-<a id="frequently-asked-questions-1" class="anchor" href="#frequently-asked-questions-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Frequently Asked Questions</h4>
+<h3>Other Notes</h3>
+<h4>Additional Documentation</h4><h3>Changelog</h3>
 
-<h3>
-<a id="other-notes" class="anchor" href="#other-notes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Other Notes</h3>
-
-<h4>
-<a id="additional-documentation" class="anchor" href="#additional-documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Additional Documentation</h4>
-
-<h3>
-<a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h3>
-
-<ol>
-<li>The WPSSO AM Settings Page</li>
-<li>The App Product Tab</li>
-</ol>
-
-<h3>
-<a id="changelog" class="anchor" href="#changelog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Changelog</h3>
-
-<h4>
-<a id="free--basic-version-repository" class="anchor" href="#free--basic-version-repository" aria-hidden="true"><span class="octicon octicon-link"></span></a>Free / Basic Version Repository</h4>
+<h4>Free / Basic Version Repository</h4>
 
 <ul>
 <li><a href="https://github.com/SurniaUlula/wpsso-am">GitHub</a></li>
 <li><a href="https://wordpress.org/plugins/wpsso-am/developers/">WordPress.org</a></li>
 </ul>
 
-<h4>
-<a id="version-131-20150421" class="anchor" href="#version-131-20150421" aria-hidden="true"><span class="octicon octicon-link"></span></a>Version 1.3.1 (2015/04/21)</h4>
+<h4>Version 1.3.1 (2015/04/21)</h4>
 
 <ul>
-<li>
-<strong>New Features</strong>
+<li><strong>New Features</strong>
 
 <ul>
 <li><em>None</em></li>
-</ul>
-</li>
-<li>
-<strong>Improvements</strong>
+</ul></li>
+<li><strong>Improvements</strong>
 
 <ul>
 <li>Replaced self-deactivation by a warning notice if the WPSSO plugin is not found.</li>
 <li>Made use of the new table row class 'hide_in_basic' from WPSSO v3.0.5 for the Social Settings metabox tab options.</li>
-</ul>
-</li>
-<li>
-<strong>Bugfixes</strong>
+</ul></li>
+<li><strong>Bugfixes</strong>
 
 <ul>
 <li>Fixed variable references to a deprecated 'plugin_display' option.</li>
-</ul>
-</li>
+</ul></li>
 </ul>
 
-<h4>
-<a id="version-13-20150412" class="anchor" href="#version-13-20150412" aria-hidden="true"><span class="octicon octicon-link"></span></a>Version 1.3 (2015/04/12)</h4>
+<h4>Version 1.3 (2015/04/12)</h4>
 
 <ul>
-<li>
-<strong>New Features</strong>
+<li><strong>New Features</strong>
 
 <ul>
 <li><em>None</em></li>
-</ul>
-</li>
-<li>
-<strong>Improvements</strong>
+</ul></li>
+<li><strong>Improvements</strong>
 
 <ul>
 <li>Moved the minimum version checks to a new <code>WpssoAm::min_version_warning()</code> method.</li>
 <li>Refactored code for the new "WPSSO Pro Update Manager (WPSSO UM)" <em>Free</em> extension plugin.</li>
-</ul>
-</li>
-<li>
-<strong>Bugfixes</strong>
+</ul></li>
+<li><strong>Bugfixes</strong>
 
 <ul>
 <li><em>None</em></li>
-</ul>
-</li>
+</ul></li>
 </ul>
 
-<h4>
-<a id="version-12-20150402" class="anchor" href="#version-12-20150402" aria-hidden="true"><span class="octicon octicon-link"></span></a>Version 1.2 (2015/04/02)</h4>
+<h4>Version 1.2 (2015/04/02)</h4>
 
 <ul>
-<li>
-<strong>New Features</strong>
+<li><strong>New Features</strong>
 
 <ul>
 <li><em>None</em></li>
-</ul>
-</li>
-<li>
-<strong>Improvements</strong>
+</ul></li>
+<li><strong>Improvements</strong>
 
 <ul>
 <li>Renamed the main library file from "appmeta" to "filters".</li>
 <li>Renamed the settings library files from "appmeta" to "am-general".</li>
-</ul>
-</li>
-<li>
-<strong>Bugfixes</strong>
+</ul></li>
+<li><strong>Bugfixes</strong>
 
 <ul>
 <li><em>None</em></li>
+</ul></li>
 </ul>
-</li>
-</ul>
+<h3>Upgrade Notice</h3>
 
-<h3>
-<a id="upgrade-notice" class="anchor" href="#upgrade-notice" aria-hidden="true"><span class="octicon octicon-link"></span></a>Upgrade Notice</h3>
-
-<h4>
-<a id="131" class="anchor" href="#131" aria-hidden="true"><span class="octicon octicon-link"></span></a>1.3.1</h4>
-
+<h4>1.3.1</h4>
 <p>Replaced self-deactivation by a warning notice if the WPSSO plugin is not found.</p>
 
-<h4>
-<a id="13" class="anchor" href="#13" aria-hidden="true"><span class="octicon octicon-link"></span></a>1.3</h4>
+<h4>1.3</h4>
+<p>Refactored code for the new &quot;WPSSO Pro Update Manager (WPSSO UM)&quot; Free extension plugin.</p>
 
-<p>Refactored code for the new "WPSSO Pro Update Manager (WPSSO UM)" Free extension plugin.</p>
-
-<h4>
-<a id="12" class="anchor" href="#12" aria-hidden="true"><span class="octicon octicon-link"></span></a>1.2</h4>
-
+<h4>1.2</h4>
 <p>Renamed the settings and main library files.</p>
+
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/SurniaUlula">SurniaUlula</a></p>
