--- a/index.html
+++ b/index.html
@@ -32,18 +32,17 @@
 
 <table>
 <tr><th align="right" valign="top" nowrap>Plugin Name</th><td>WPSSO App Meta (WPSSO AM)</td></tr>
+<tr><th align="right" valign="top" nowrap>Description Summary</th><td>WPSSO extension to provide Apple Store / iTunes and Google Play App meta tags for Apple&#039;s mobile Safari and Twitter&#039;s App Card.</td></tr>
 <tr><th align="right" valign="top" nowrap>Stable Version</th><td>1.3.1</td></tr>
-<tr><th align="right" valign="top" nowrap>Contributors</th><td>jsmoriss</td></tr>
-<tr><th align="right" valign="top" nowrap>Donate / Purchase</th><td><a href="https://surniaulula.com/extend/plugins/wpsso-am/">https://surniaulula.com/extend/plugins/wpsso-am/</a></td></tr>
-<tr><th align="right" valign="top" nowrap>Tags / Keywords</th><td>wpsso, app, iphone, ipad, googleplay, meta, tags, itunes</td></tr>
-<tr><th align="right" valign="top" nowrap>License</th><td><a href="http://www.gnu.org/licenses/gpl.txt">GPLv3</a></td></tr>
 <tr><th align="right" valign="top" nowrap>Requires At Least</th><td>WordPress 3.0</td></tr>
 <tr><th align="right" valign="top" nowrap>Tested Up To</th><td>WordPress 4.2</td></tr>
+<tr><th align="right" valign="top" nowrap>Contributors</th><td>jsmoriss</td></tr>
+<tr><th align="right" valign="top" nowrap>Website URL</th><td><a href="https://surniaulula.com/extend/plugins/wpsso-am/">https://surniaulula.com/extend/plugins/wpsso-am/</a></td></tr>
+<tr><th align="right" valign="top" nowrap>License</th><td><a href="http://www.gnu.org/licenses/gpl.txt">GPLv3</a></td></tr>
+<tr><th align="right" valign="top" nowrap>Tags / Keywords</th><td>wpsso, app, iphone, ipad, googleplay, meta, tags, itunes</td></tr>
 </table>
 
-<p>WPSSO extension to provide Apple Store / iTunes and Google Play App meta tags for Apple&#039;s mobile Safari and Twitter&#039;s App Card.</p>
-
-<h3>Description</h3>
+<h2>Description</h2>
 
 <p align="center"><img src="https://surniaulula.github.io/wpsso-am/assets/icon-256x256.png" width="256" height="256" /></p><p><strong>Do you have a mobile App for your website</strong> that you'd like to promote as a banner in Apple's mobile Safari?</p>
 
@@ -107,7 +106,7 @@
 </blockquote>
 
 
-<h3>Installation</p>
+<h2>Installation</h2>
 
 <h4>Install and Uninstall</h4>
 
@@ -117,12 +116,12 @@
 </ul>
 
 
-<h3>Frequently Asked Questions</h3>
+<h2>Frequently Asked Questions</h2>
 
 <h4>Frequently Asked Questions</h4>
 
 
-<h3>Other Notes</h3>
+<h2>Other Notes</h2>
 
 <h3>Other Notes</h3>
 <h4>Additional Documentation</h4>
