documentation and assets update

--- a/index.html
+++ b/index.html
@@ -56,17 +56,16 @@
 
 <h4>Quick List of Features</h4>
 
-<p><strong>Free / Basic Version</strong></p>
+<p><strong>Free / Basic Features</strong></p>
 
 <ul>
 <li>Create an optional <strong>banner advertisement</strong> in Apple's mobile Safari for your website's Apple Store App.</li>
 <li>Include the <strong>banner advertisement</strong> on index and archive webpages, a static home page, Posts, Pages, and custom post types (ie. Product pages).</li>
 </ul>
 
-<p><strong>Pro / Power-User Version</strong></p>
+<p><strong>Pro / Power-User Features</strong></p>
 
 <ul>
-<li><strong>No Risk 30 Day Refund Policy</strong></li>
 <li>Add an <em>App Product</em> tab to WPSSO's Social Settings metabox with additional options:
 
 <ul>
@@ -104,7 +103,7 @@
 </ul>
 
 <blockquote>
-<p>The WordPress Social Sharing Optimization (WPSSO) plugin is required to use the WPSSO AM extension. You can use the Free version of WPSSO AM with both the Free and Pro versions of WPSSO, but <a href="http://wpsso.com/extend/plugins/wpsso-am/">WPSSO AM Pro</a> requires the use of <a href="http://wpsso.com/extend/plugins/wpsso/">WPSSO Pro</a> as well.</p>
+<p>The WordPress Social Sharing Optimization (WPSSO) plugin is required to use the WPSSO AM extension. You can use the Free version of WPSSO AM with <em>both</em> the Free and Pro versions of WPSSO, but <a href="http://wpsso.com/extend/plugins/wpsso-am/">WPSSO AM Pro</a> requires the use of <a href="http://wpsso.com/extend/plugins/wpsso/">WPSSO Pro</a> as well. <a href="http://wpsso.com/extend/plugins/wpsso-am/">Purchase the WPSSO AM Pro extension</a> (includes a <em>No Risk 30 Day Refund Policy</em>).</p>
 </blockquote>
 
 
