update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 
 <h4>Quick List of Features</h4>
 
-<p><strong>Free / Basic Features</strong></p>
+<p><strong>WPSSO AM Free / Basic Features</strong></p>
 
 <ul>
 <li>Adds an optional banner advertisement in Apple's mobile Safari for your website's Apple Store mobile App.</li>
 <li>Include the banner advertisement on index / archive webpages, a your static home page, Posts, Pages, and custom post types (e-commerce Product pages, for example).</li>
 </ul>
 
-<p><strong>Pro / Power-User Features</strong></p>
+<p><strong>WPSSO AM Pro / Power-User Features</strong></p>
 
 <ul>
 <li>Add an <em>App Product</em> tab to WPSSO's Social Settings metabox with additional options:
