update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <p>WPSSO Mobile App Meta (WPSSO AM) works in conjunction with the <a href="https://wordpress.org/plugins/wpsso/">WordPress Social Sharing Optimization (WPSSO)</a> plugin, extending its features with additional settings pages, tabs, and options to include iPhone, iPad, and Google Play App meta tags in your webpages (for Apple's mobile Safari and <a href="https://dev.twitter.com/cards/types/app">Twitter's App Card</a>).</p>
 
-<p><strong>Available in multiple languages:</strong></p>
+<h4>Available in Multiple Languages</h4>
 
 <ul>
 <li>English (US)</li>
