update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </ul></li>
 </ul>
 
-<h4>Uses the WPSSO Framework</h4>
+<h4>Extends the WPSSO Social Plugin</h4>
 
 <p>The WordPress Social Sharing Optimization (WPSSO) plugin is required to use the WPSSO AM extension. You can use the Free version of WPSSO AM with <em>both</em> the Free and Pro versions of WPSSO, but <a href="http://wpsso.com/extend/plugins/wpsso-am/">WPSSO AM Pro</a> requires the use of the <a href="http://wpsso.com/extend/plugins/wpsso/">WPSSO Pro</a> plugin as well. <a href="http://wpsso.com/extend/plugins/wpsso-am/">Purchase the WPSSO Mobile App Meta (WPSSO AM) Pro extension</a> (includes a <em>No Risk 30 Day Refund Policy</em>).</p>
 
