update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 <p>You can use the Free version of WPSSO AM with <em>both</em> the Free and Pro versions of WPSSO, but the <a href="http://wpsso.com/extend/plugins/wpsso-am/">WPSSO AM Pro</a> version requires the use of the <a href="http://wpsso.com/extend/plugins/wpsso/">WPSSO Pro</a> version as well.</p>
 
-<p><a href="http://wpsso.com/extend/plugins/wpsso-am/">Purchase the WPSSO Mobile App Meta (WPSSO AM) Pro extension</a> (includes a <em>No Risk 30 Day Refund Policy</em>).</p>
+<p>Purchase the <a href="http://wpsso.com/extend/plugins/wpsso-am/">WPSSO Mobile App Meta (WPSSO AM) Pro</a> extension (includes a <em>No Risk 30 Day Refund Policy</em>).</p>
 
 
 <h2>Installation</h2>
