update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <p><strong>WPSSO AM Pro / Power-User Features</strong></p>
 
 <ul>
-<li>Extends the features of WPSSO Pro (all WPSSO Pro extensions require a licensed and active WPSSO Pro plugin).</li>
+<li>Extends the features of WPSSO Pro (requires a licensed and active WPSSO Pro plugin).</li>
 <li>Add an <em>App Product</em> tab to WPSSO's Social Settings metabox with additional options:
 
 <ul>
