update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -56,8 +56,20 @@
 
 <ul>
 <li>Extends the features of either the Free or Pro versions of WPSSO.</li>
-<li>Adds an optional banner advertisement in Apple's mobile Safari for your website's Apple Store mobile App.</li>
-<li>Include the banner advertisement on index / archive webpages, a your static home page, Posts, Pages, and custom post types (e-commerce Product pages, for example).</li>
+<li>Adds an optional banner advertisement in Apple's mobile Safari for your website's Apple Store mobile App.
+
+<ul>
+<li>Add Banner to Index Webpages</li>
+<li>Add Banner to Static Homepage</li>
+<li>Add Banner to Post Types (Posts, Pages, Media, Products, etc.).</li>
+<li>Apple Store App
+
+<ul>
+<li>Default App ID Number</li>
+<li>Default Affiliate Data</li>
+<li>Default Argument String</li>
+</ul></li>
+</ul></li>
 </ul>
 
 <p><strong>WPSSO AM Pro / Power-User Features</strong></p>
@@ -67,10 +79,39 @@
 <li>Add an <em>App Product</em> tab to WPSSO's Social Settings metabox with additional options:
 
 <ul>
-<li>The App Store Territory.</li>
-<li>Apple Store iPhone App ID, Name, and Custom URL Scheme.</li>
-<li>Apple Store iPad App ID, Name, and Custom URL Scheme.</li>
-<li>Google Play App ID, Name, and Custom URL Scheme.</li>
+<li>Twitter App Card
+
+<ul>
+<li>App Store Territory</li>
+<li>iPhone App Details
+
+<ul>
+<li>iPhone App ID</li>
+<li>iPhone App Name</li>
+<li>iPhone App URL Scheme</li>
+</ul></li>
+<li>iPad App Details
+
+<ul>
+<li>iPad App ID</li>
+<li>iPad App Name</li>
+<li>iPad App URL Scheme</li>
+</ul></li>
+<li>Google Play App Details
+
+<ul>
+<li>Google Play App ID</li>
+<li>Google Play App Name</li>
+<li>Google Play App URL Scheme</li>
+</ul></li>
+</ul></li>
+<li>Mobile App Banner
+
+<ul>
+<li>App ID Number</li>
+<li>Affiliate Data</li>
+<li>Argument String</li>
+</ul></li>
 </ul></li>
 <li>Include the <em>App Product</em> tab on Posts, Pages, and custom post types (e-commerce Product pages, for example).</li>
 <li>Adds <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags for <em>App Product</em> webpages.</li>
