update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <li>Adds an optional banner advertisement in Apple's mobile Safari for your website's Apple Store mobile App.
 
 <ul>
-<li>Add Banner to Index Webpages</li>
+<li>Add Banner to Archive Webpages</li>
 <li>Add Banner to Static Homepage</li>
 <li>Add Banner to Post Types (Posts, Pages, Media, Products, etc.).</li>
 <li>Apple Store App
