update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -39,16 +39,18 @@
 <tr><th align="right" valign="top" nowrap>Contributors</th><td>jsmoriss</td></tr>
 <tr><th align="right" valign="top" nowrap>Website URL</th><td><a href="https://wpsso.com/?utm_source=wpssoam-readme-donate">https://wpsso.com/?utm_source=wpssoam-readme-donate</a></td></tr>
 <tr><th align="right" valign="top" nowrap>License</th><td><a href="http://www.gnu.org/licenses/gpl.txt">GPLv3</a></td></tr>
-<tr><th align="right" valign="top" nowrap>Tags / Keywords</th><td>wpsso, app, iphone, ipad, googleplay, meta, tags, itunes</td></tr>
+<tr><th align="right" valign="top" nowrap>Tags / Keywords</th><td>wpsso, app, iphone, ipad, googleplay, google play, meta, tags, itunes, banner, safari, app store, mobile app, app card, twitter app card, twitter card</td></tr>
 </table>
 
 <h2>Description</h2>
 
-<p align="center"><img src="https://surniaulula.github.io/wpsso-am/assets/icon-256x256.png" width="256" height="256" /></p><p><strong>Do you have a mobile App for your website</strong> that you'd like to promote as a banner in Apple's mobile Safari?</p>
+<p align="center"><img src="https://surniaulula.github.io/wpsso-am/assets/icon-256x256.png" width="256" height="256" /></p><p><strong>Promote your website mobile App as a banner in Apple's mobile Safari.</strong></p>
 
-<p><strong>Do you sell Apple Store mobile Apps</strong>, and you'd like to support the <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> on your product pages?</p>
+<p><strong>Add <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to your Apple Store or Google Play mobile Apps product pages.</p>
 
-<p>WPSSO Mobile App Meta (WPSSO AM) works in conjunction with the <a href="https://wordpress.org/plugins/wpsso/">WordPress Social Sharing Optimization (WPSSO)</a> plugin, extending its features with additional settings pages, tabs, and options to include iPhone, iPad, and Google Play App meta tags in your webpages (for Apple's mobile Safari and <a href="https://dev.twitter.com/cards/types/app">Twitter's App Card</a>).</p>
+<blockquote>
+<p>WPSSO Mobile App Meta (WPSSO AM) is an extension for the <a href="https://wordpress.org/plugins/wpsso/">WordPress Social Sharing Optimization (WPSSO)</a> plugin &mdash; the WPSSO plugin is required for the WPSSO AM extension.</p>
+</blockquote>
 
 <h4>Quick List of Features</h4>
 
