--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <tr><th align="right" valign="top" nowrap>Contributors</th><td>jsmoriss</td></tr>
 <tr><th align="right" valign="top" nowrap>Website URL</th><td><a href="https://wpsso.com/?utm_source=wpssoam-readme-donate">https://wpsso.com/?utm_source=wpssoam-readme-donate</a></td></tr>
 <tr><th align="right" valign="top" nowrap>License</th><td><a href="http://www.gnu.org/licenses/gpl.txt">GPLv3</a></td></tr>
-<tr><th align="right" valign="top" nowrap>Tags / Keywords</th><td>wpsso, app, iphone, ipad, googleplay, google play, meta, tags, itunes, banner, safari, app store, mobile app, app card, twitter app card, twitter card</td></tr>
+<tr><th align="right" valign="top" nowrap>Tags / Keywords</th><td>wpsso, app, app store, mobile app, app card, itunes, iphone, ipad, googleplay, google play, meta, tags, banner, safari, twitter app card, twitter card</td></tr>
 </table>
 
 <h2>Description</h2>
