update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <ul>
 <li>Add Banner to Archive Webpages</li>
-<li>Add Banner to Static Homepage</li>
+<li>Add Banner to Static Front Page</li>
 <li>Add Banner to Post Types (Posts, Pages, Media, Products, etc.).</li>
 <li>Apple Store App
 
