update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <h2>Description</h2>
 
-<p align="center"><img src="https://surniaulula.github.io/wpsso-am/assets/icon-256x256.png" /></p><p></p>
+<p><img src="https://surniaulula.github.io/wpsso-am/assets/icon-256x256.png" width="128" height="128" class="plugin_icon"></p>
 
 <p><strong>Promote your website mobile App</strong> as a banner in Apple's mobile Safari.</p>
 
