update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
 <h4>Extends the WPSSO Plugin</h4>
 
-<p>The WPSSO plugin is required to use the WPSSO AM extension.</p>
+<p>The WPSSO (WordPress Social Sharing Optimization) plugin is required to use the WPSSO AM extension.</p>
 
 <blockquote>
 <p>The <a href="https://wordpress.org/plugins/wpsso-am/">WPSSO AM Free extension</a> works with the WPSSO Free or Pro plugin. The <a href="https://wpsso.com/extend/plugins/wpsso-am/?utm_source=wpssoam-readme-extends">WPSSO AM Pro extension</a> (along with all WPSSO Pro extensions) requires the <a href="https://wpsso.com/extend/plugins/wpsso/?utm_source=wpssoam-readme-extends">WPSSO Pro plugin</a> as well.</p>
