--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ul>
       </header>
       <section>
-<h1>WPSSO Mobile App Meta</h1><h3>for Apple&#039;s mobile Safari and Twitter&#039;s App Card</h3>
+<h1>WPSSO Mobile App Meta</h1><h3>Meta Tags for Apple&#039;s mobile Safari and Twitter&#039;s App Card</h3>
 
 <table>
 <tr><th align="right" valign="top" nowrap>Plugin Name</th><td>WPSSO Mobile App Meta (WPSSO AM)</td></tr>
