--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <h4>Quick List of Features</h4>
 
-<p><strong>WPSSO Mobile App Meta Free / Standard Features</strong></p>
+<p><strong>WPSSO AM Free / Standard Features</strong></p>
 
 <ul>
 <li>Extends the features of WPSSO Free or Pro.</li>
@@ -75,7 +75,7 @@
 </ul></li>
 </ul>
 
-<p><strong>WPSSO Mobile App Meta Pro / Additional Features</strong></p>
+<p><strong>WPSSO AM Pro / Additional Features</strong></p>
 
 <ul>
 <li>Extends the features of WPSSO Pro (requires a licensed WPSSO Pro plugin).</li>
@@ -146,7 +146,7 @@
 
 <h4>Extends the WPSSO Plugin</h4>
 
-<p>The <a href="https://wordpress.org/plugins/wpsso-am/">WPSSO Mobile App Meta Free extension</a> works with the WPSSO Free or Pro plugin. The <a href="https://wpsso.com/extend/plugins/wpsso-am/?utm_source=wpssoam-readme-extends">WPSSO Mobile App Meta Pro extension</a> (along with all WPSSO Pro extensions) requires the <a href="https://wpsso.com/extend/plugins/wpsso/?utm_source=wpssoam-readme-extends">WPSSO Pro plugin</a> as well.</p>
+<p>The <a href="https://wordpress.org/plugins/wpsso-am/">WPSSO AM Free extension</a> works with the WPSSO Free or Pro plugin. The <a href="https://wpsso.com/extend/plugins/wpsso-am/?utm_source=wpssoam-readme-extends">WPSSO AM Pro extension</a> (along with all WPSSO Pro extensions) requires the <a href="https://wpsso.com/extend/plugins/wpsso/?utm_source=wpssoam-readme-extends">WPSSO Pro plugin</a> as well.</p>
 
 <p><a href="https://wpsso.com/extend/plugins/wpsso-am/?utm_source=wpssoam-readme-purchase">Purchase the WPSSO Mobile App Meta Pro extension here</a> (all purchases include a <em>No Risk 30 Day Refund Policy</em>).</p>
 
