update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <ul>
 <li>Add Banner to Archive Webpages</li>
 <li>Add Banner to Static Front Page</li>
-<li>Add Banner to Post Types (Posts, Pages, Media, Products, etc.).</li>
+<li>Add Banner to Post Types (posts, pages, media, products, etc.).</li>
 <li>Apple Store App
 
 <ul>
@@ -84,7 +84,8 @@
 
 <ul>
 <li>Extends the features of WPSSO Pro (requires a licensed WPSSO Pro plugin).</li>
-<li>Add an <em>App Product</em> tab to WPSSO's Social Settings metabox with additional options:
+<li>Adds <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to webpages.</li>
+<li>Include a <em>Mobile Apps</em> tab in WPSSO's Social / Search Optimization metabox with additional options:
 
 <ul>
 <li>Twitter App Card
@@ -121,8 +122,7 @@
 <li>Argument String</li>
 </ul></li>
 </ul></li>
-<li>Include the <em>App Product</em> tab on Posts, Pages, and custom post types (e-commerce Product pages, for example).</li>
-<li>Adds <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags for <em>App Product</em> webpages.</li>
+<li>Include or exclude the <em>Mobile Apps</em> tab on posts, pages, and custom post types.</li>
 </ul>
 
 <h4>Mobile App Meta Tags</h4>
