update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p><strong>Prerequisite</strong> &mdash; WPSSO Mobile App Meta is an extension for the WPSSO (Core Plugin), which <em>automatically</em> generates complete and accurate meta tags and Schema markup from your content for Social Media Optimization (SMO) and Search Engine Optimization (SEO).</p>
 
 <ul>
-<li>The WPSSO AM Free extension works with either the WPSSO (Core Plugin) Free or Pro versions.</li>
+<li>The WPSSO AM Free extension works with either the Free or Pro version of WPSSO (Core Plugin).</li>
 <li>The <a href="https://wpsso.com/extend/plugins/wpsso-am/?utm_source=wpssoam-readme-prereq">WPSSO AM Pro extension</a> uses many WPSSO Pro core plugin features and requires the <a href="https://wpsso.com/extend/plugins/wpsso/?utm_source=wpssoam-readme-prereq">WPSSO Pro core plugin</a>.</li>
 </ul>
 </blockquote>
@@ -151,7 +151,7 @@
 
 <h4>Extends the WPSSO Plugin</h4>
 
-<p><span style="color:#33cc33">&#x0229b;</span> &nbsp; The WPSSO AM Free extension works with either the WPSSO (Core Plugin) Free or Pro version.</p>
+<p><span style="color:#33cc33">&#x0229b;</span> &nbsp; The WPSSO AM Free extension works with either the Free or Pro version of WPSSO (Core Plugin).</p>
 
 <p><span style="color:#33cc33">&#x0229b;</span> &nbsp; The <a href="https://wpsso.com/extend/plugins/wpsso-am/?utm_source=wpssoam-readme-extends">WPSSO AM Pro extension</a> uses many WPSSO Pro (Core Plugin) features and requires the <a href="https://wpsso.com/extend/plugins/wpsso/?utm_source=wpssoam-readme-extends">WPSSO Pro (Core Plugin)</a>.</p>
 
