update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
 
 <p><img class="readme-icon" src="https://surniaulula.github.io/wpsso-am/assets/icon-256x256.png"></p>
 
-<p><strong>Promote your website mobile App</strong> as a banner in Apple's mobile Safari.</p>
+<p><strong>Promote your website mobile App with a banner in Apple's mobile Safari.</strong></p>
 
-<p><strong>Add <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags</strong> to Apple Store and/or Google Play mobile Apps product pages.</p>
+<p><strong>Add <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to mobile App product pages.</strong></p>
 
 <blockquote>
 <p><strong>Prerequisite</strong> &mdash; WPSSO Mobile App Meta is an extension for the WPSSO (Core Plugin), which <em>automatically</em> generates complete and accurate meta tags and Schema markup from your content for Social Media Optimization (SMO) and Search Engine Optimization (SEO).</p>
 
 <p>The WPSSO AM Free extension works with either the Free or Pro version of WPSSO (Core Plugin).</p>
 
-<p>The <a href="https://wpsso.com/extend/plugins/wpsso-am/?utm_source=wpssoam-readme-prereq">WPSSO AM Pro extension</a> uses many WPSSO Pro core plugin features and requires the <a href="https://wpsso.com/extend/plugins/wpsso/?utm_source=wpssoam-readme-prereq">WPSSO Pro core plugin</a>.</p>
+<p>The <a href="https://wpsso.com/extend/plugins/wpsso-am/?utm_source=wpssoam-readme-prereq">WPSSO AM Pro extension</a> uses many WPSSO Pro (Core Plugin) features and requires the <a href="https://wpsso.com/extend/plugins/wpsso/?utm_source=wpssoam-readme-prereq">WPSSO Pro (Core Plugin)</a>.</p>
 </blockquote>
 
 <h4>Quick List of Features</h4>
 
 <p><strong>WPSSO AM Free / Standard Features</strong></p>
 
-<ul>
-<li>Extends the features of WPSSO Free or Pro.</li>
-<li>Adds an optional banner advertisement in Apple's mobile Safari for your website's Apple Store mobile App.
+<p><span style="color:#33cc33">&#x0229b;</span> &nbsp; Extends the features of WPSSO Free or Pro.</p>
+
+<p><span style="color:#33cc33">&#x0229b;</span> &nbsp; Adds an optional banner advertisement in Apple's mobile Safari for your website's Apple Store mobile App.</p>
 
 <ul>
 <li>Add Banner to Archive Webpages</li>
@@ -76,15 +76,15 @@
 <li>Default Affiliate Data</li>
 <li>Default Argument String</li>
 </ul></li>
-</ul></li>
 </ul>
 
 <p><strong>WPSSO AM Pro / Additional Features</strong></p>
 
-<ul>
-<li>Extends the features of WPSSO Pro (requires a licensed WPSSO Pro plugin).</li>
-<li>Adds <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to webpages.</li>
-<li>Include a <em>Mobile Apps</em> tab in WPSSO's Social and Search Optimization metabox with additional options:
+<p><span style="color:#33cc33">&#x0229b;</span> &nbsp; Extends the features of WPSSO Pro (requires a licensed WPSSO Pro plugin).</p>
+
+<p><span style="color:#33cc33">&#x0229b;</span> &nbsp; Adds <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to webpages.</p>
+
+<p><span style="color:#33cc33">&#x0229b;</span> &nbsp; Includes a <em>Mobile Apps</em> tab in the Social and Search Optimization metabox with additional options:</p>
 
 <ul>
 <li>Twitter App Card
@@ -120,19 +120,19 @@
 <li>Affiliate Data</li>
 <li>Argument String</li>
 </ul></li>
-</ul></li>
-<li>Include or exclude the <em>Mobile Apps</em> tab on posts, pages, and custom post types.</li>
 </ul>
+
+<p><span style="color:#33cc33">&#x0229b;</span> &nbsp; Include or exclude the <em>Mobile Apps</em> tab on posts, pages, and custom post types.</p>
 
 <h4>Mobile App Meta Tags</h4>
 
-<ul>
-<li><strong>Apple mobile Safari Meta Tags</strong>
+<p><span style="color:#33cc33">&#x0229b;</span> &nbsp; <strong>Apple mobile Safari Meta Tags</strong></p>
 
 <ul>
 <li>apple-itunes-app</li>
-</ul></li>
-<li><strong>Twitter App Card Meta Tags</strong> (Pro version)
+</ul>
+
+<p><span style="color:#33cc33">&#x0229b;</span> &nbsp; <strong>Twitter App Card Meta Tags</strong> (Pro version)</p>
 
 <ul>
 <li>twitter:app:country</li>
@@ -145,7 +145,6 @@
 <li>twitter:app:url:iphone</li>
 <li>twitter:app:url:ipad</li>
 <li>twitter:app:url:googleplay</li>
-</ul></li>
 </ul>
 
 <h4>Extends the WPSSO Plugin</h4>
