update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 </ul></li>
 </ul>
 
+<p><span style="color:#33cc33">&#x0229b;</span> &nbsp; Download the Free version from <a href="https://surniaulula.github.io/wpsso-am/">GitHub</a> or <a href="https://wordpress.org/plugins/wpsso-am/">WordPress.org</a>.</p>
+
 <h4>Quick List of Features (Continued)</h4>
 
 <p><strong>WPSSO AM Pro / Additional Features</strong></p>
