update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>WPSSO AM</h1>
-        <p>WPSSO App Meta (WPSSO AM)</p>
+        <p>WPSSO Mobile App Meta</p>
 
         <p class="view"><a href="https://github.com/SurniaUlula/wpsso-am">View the Project on GitHub <small>SurniaUlula/wpsso-am</small></a></p>
 
