update for non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <h3>WPSSO (Core Plugin) Prerequisite</h3>
 
-<p>WPSSO Mobile App Meta is an extension for the WPSSO (Core Plugin) &mdash; which creates complete and accurate meta tags and Schema markup from your content for social sharing, social media, search / SEO and rich cards.</p>
+<p>WPSSO Mobile App Meta is an extension for the WPSSO (Core Plugin) &mdash; which provides complete and accurate meta tags and Schema markup from your content for social sharing, social media, search / SEO and rich cards.</p>
 
 <p>The WPSSO AM Free extension works with either the Free or Pro version of WPSSO (Core Plugin).</p>
 
