non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -44,18 +44,29 @@
 
 <p><strong>Promote your website mobile App with a banner in Apple's mobile Safari.</strong></p>
 
-<p><strong>Add <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to mobile App product pages.</strong></p>
+<p><strong>Add <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to mobile App product pages:</strong></p>
+
+<ul>
+<li>twitter:app:country</li>
+<li>twitter:app:id:iphone</li>
+<li>twitter:app:id:ipad</li>
+<li>twitter:app:id:googleplay</li>
+<li>twitter:app:name:iphone</li>
+<li>twitter:app:name:ipad</li>
+<li>twitter:app:name:googleplay</li>
+<li>twitter:app:url:iphone</li>
+<li>twitter:app:url:ipad</li>
+<li>twitter:app:url:googleplay</li>
+</ul>
 
 <div style="clear:both"></div>
-
-<!-- clear fyi container before the first h3 -->
 
 <h3>WPSSO AM Free / Standard Features</h3>
 
 <ul>
 <li><p>Extends the features of the WPSSO Core Free or Pro plugin.</p></li>
-<li><p>Adds an optional banner advertisement in Apple's mobile Safari for your website's Apple Store mobile App.</p></li>
-<li><p>Adds a Mobile App Meta settings page with additional options:</p>
+<li><p>Adds an optional banner in Apple's mobile Safari for your website's Apple Store mobile App.</p></li>
+<li><p>Adds a Mobile App Meta settings page to the SSO menu with additional options:</p>
 
 <ul>
 <li>Mobile App Banner
@@ -128,22 +139,6 @@
 <li>Argument String</li>
 </ul></li>
 </ul></li>
-</ul>
-
-<h3>Mobile App Meta Tags</h3>
-
-<ul>
-<li>apple-itunes-app</li>
-<li>twitter:app:country</li>
-<li>twitter:app:id:iphone</li>
-<li>twitter:app:id:ipad</li>
-<li>twitter:app:id:googleplay</li>
-<li>twitter:app:name:iphone</li>
-<li>twitter:app:name:ipad</li>
-<li>twitter:app:name:googleplay</li>
-<li>twitter:app:url:iphone</li>
-<li>twitter:app:url:ipad</li>
-<li>twitter:app:url:googleplay</li>
 </ul>
 
 <h3>WPSSO Core Plugin Prerequisite</h3>
