non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <p><strong>Add <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to mobile App product pages:</strong></p>
 
-<ul style="display:inline;">
+<ul style="display:inline-block;">
 <li>twitter:app:country</li>
 <li>twitter:app:id:iphone</li>
 <li>twitter:app:id:ipad</li>
