non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </ul></li>
 </ul>
 
-<h3>WPSSO AM Additional Features (Pro version)</h3>
+<h3>WPSSO AM Pro / Premium Features</h3>
 
 <ul>
 <li><p>Extends the features of WPSSO Core Pro (requires an active and licensed <a href="https://wpsso.com/">WPSSO Core Pro plugin</a>).</p></li>
@@ -144,7 +144,7 @@
 
 <h3>WPSSO Core Plugin Prerequisite</h3>
 
-<p>WPSSO Mobile App Meta (aka WPSSO AM) is an add-on for the <a href="https://wordpress.org/plugins/wpsso/">WPSSO Core plugin</a> (Free or Pro version).</p>
+<p>WPSSO Mobile App Meta (aka WPSSO AM) is an add-on for the <a href="https://wordpress.org/plugins/wpsso/">WPSSO Core plugin</a>.</p>
 
 <p>The <a href="https://wpsso.com/extend/plugins/wpsso-am/">WPSSO AM Pro add-on</a> uses WPSSO Core Pro features and requires an active and licensed <a href="https://wpsso.com/">WPSSO Core Pro plugin</a>.</p>
 
