--- a/html/install.html
+++ b/html/install.html
@@ -6,7 +6,7 @@
 
 <h2>Install the Add-on</h2>
 
-<h3>Free / Standard version</h3>
+<h3>Standard version</h3>
 
 <ol>
 
@@ -74,7 +74,7 @@
 
 	<li>Scroll down and locate the "WPSSO Mobile App Meta" add-on and its links.</li>
 
-	<li><strong>If the Free / Standard version of WPSSO AM is already installed</strong>, click the <em>Add-on Details and Update</em> link:
+	<li><strong>If the Standard version of WPSSO AM is already installed</strong>, click the <em>Add-on Details and Update</em> link:
 
 	<ol>
 
