non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <table>
 <tr><th align="right" valign="top" nowrap>Plugin Name</th><td>WPSSO Mobile App Meta Tags</td></tr>
-<tr><th align="right" valign="top" nowrap>Summary</th><td>Apple Store / iTunes and Google Play App Meta Tags for Apple&#039;s mobile Safari Banner and Twitter&#039;s App Card.</td></tr>
+<tr><th align="right" valign="top" nowrap>Summary</th><td>Apple Store / iTunes and Google Play App meta tags for Apple&#039;s mobile Safari banner and Twitter&#039;s App Card.</td></tr>
 <tr><th align="right" valign="top" nowrap>Stable Version</th><td>3.7.1</td></tr>
 <tr><th align="right" valign="top" nowrap>Requires PHP</th><td>5.6 or newer</td></tr>
 <tr><th align="right" valign="top" nowrap>Requires WordPress</th><td>4.4 or newer</td></tr>
@@ -136,6 +136,8 @@
 <h3>WPSSO Core Plugin Required</h3>
 
 <p>WPSSO Mobile App Meta Tags (aka WPSSO AM) is an add-on for the <a href="https://wordpress.org/plugins/wpsso/">WPSSO Core plugin</a>.</p>
+
+<p>WPSSO Core and its add-ons make sure your content looks great on social sites and in search results, no matter how your URLs are crawled, shared, re-shared, posted, or embedded.</p>
 
 
 <h2>Installation</h2>
