non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
         </ul>
       </header>
       <section>
+
+Warning: Use of undefined constant self - assumed 'self' (this will throw an Error in a future version of PHP) in /home/jsmoriss/svn/github/surniaulula/surniaulula.github.io/trunk/tools/parse-readme.php on line 473
+
+Warning: Use of undefined constant self - assumed 'self' (this will throw an Error in a future version of PHP) in /home/jsmoriss/svn/github/surniaulula/surniaulula.github.io/trunk/tools/parse-readme.php on line 473
+
+Warning: Use of undefined constant self - assumed 'self' (this will throw an Error in a future version of PHP) in /home/jsmoriss/svn/github/surniaulula/surniaulula.github.io/trunk/tools/parse-readme.php on line 473
+
+Warning: Use of undefined constant self - assumed 'self' (this will throw an Error in a future version of PHP) in /home/jsmoriss/svn/github/surniaulula/surniaulula.github.io/trunk/tools/parse-readme.php on line 473
+
+Warning: Use of undefined constant self - assumed 'self' (this will throw an Error in a future version of PHP) in /home/jsmoriss/svn/github/surniaulula/surniaulula.github.io/trunk/tools/parse-readme.php on line 473
+
+Warning: Use of undefined constant self - assumed 'self' (this will throw an Error in a future version of PHP) in /home/jsmoriss/svn/github/surniaulula/surniaulula.github.io/trunk/tools/parse-readme.php on line 473
 <h1>Mobile App Meta Tags</h1><h3>WPSSO Add-on</h3>
 
 <table>
