non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <h3>WPSSO AM Standard Features</h3>
 
 <ul>
-<li><p>Extends the features of the WPSSO Core plugin.</p></li>
+<li><p>Extends the features of the <a href="https://wordpress.org/plugins/wpsso/">WPSSO Core plugin</a>.</p></li>
 <li><p>Adds an optional banner in Apple's mobile Safari for your website's Apple Store mobile App.</p></li>
 <li><p>Adds optional <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to webpages.</p></li>
 <li><p>Adds a Mobile App Meta Tags settings page to the SSO menu with additional options:</p>
