non-essential support files (documentation and assets)

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <h3>WPSSO AM Add-on Features</h3>
 
-<p>Extends the features of the <a href="https://wordpress.org/plugins/wpsso/">WPSSO Core plugin</a> (required).</p>
+<p>Extends the features of the <a href="https://wordpress.org/plugins/wpsso/">WPSSO Core plugin</a> (required plugin).</p>
 
 <p>Adds an optional banner in Apple's mobile Safari for your website's Apple Store mobile App.</p>
 
